--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Christian life'
 - !lcc 'BX'
 - !lcsh 'Sermons, English'
+- GITenberg
 title: 'The Christian Life: Its Course, Its Hindrances, and Its Helps'
 url: http://www.gutenberg.org/ebooks/13151
